    - added fix into the run-simple.sh and run-developer.sh scripts; for installs in the PATH,
        this should not be needed
- fixed loading PIC program through the toolbar button; in property editor it works
- fixed converting C program to Assembly/Hex. Note that need to enable in GPLink options "Link with shared libs"
    error with __sdcc_gsinit_startup
    note: sdcc is broken in Debian/Ubuntu for PICs: https://bugs.launchpad.net/ubuntu/+source/sdcc/+bug/1077918
- fixed: when loading program to PIC, "all supported file types" is not valid
- fixed: converting C code to hex if destination file does not exist
- fixed GPLink options pane is broken; GUI needs fixing; added layout to the widget
- fixed: SDCC "other options" is not a list, but 1 huge option
    sdcc --foo --bar
    vs
    sdcc '--foo --bar' <- this is not correct
- fixed: when editing source code, many keyboard shortcuts are signaled as duplicate
    KTextEditor creates its own KActions, and those interfered with the KTechLab created ones
- fixed printing of text documents
- could not reproduce anymore: when editing source code, many nonexitent signals are used in the code
- fixed: SDCC should have an option to enable non-free libraries/includes
- fixed: SDCC should have an option to set extra SDCC's install prefix
- not needed: GPLink should have an option to set the libraries' path -- it takes libraries from SDCC install prefix
- cannot convert C code to ASM or HEX, because function __sdcc_gsinit_startup
    - need to set proper sdcclib when linking; to be automatized
    - sdcc's libraries should be properly installed
- reviewed: cannot compile code for PIC, because SDCC complains about the PIC identifier
    - pic16f84 works; others are not clear
    - gpsim pic list: gpsim ; processor list
    - sdcc pic list: touch foo.c ;
        sdcc -mpic14 -phelp foo.c
        sdcc -mpic16 -phelp --verbose foo.c
    - some PICs are not supported by SDCC