@@ -136,3 +136,4 @@ Changes between Qt3 and Qt4 port (to be completed)
         sdcc -mpic14 -phelp foo.c
         sdcc -mpic16 -phelp --verbose foo.c
     - some PICs are not supported by SDCC
+- fixed: new file toolbar button / file menu entry should appear on the toolbar by default
